@@ -1,6 +1,7 @@
 2011-01-13 WANG Lu <coolwanglu(a)gmail.com>
 	* Run as root
 	* Skip when readlink on /proc/pid/exe fails
+	* Added a script for building packages for PPA
 
 2011-01-12 WANG Lu <coolwanglu(a)gmail.com>
 	* Using pager when showing help messages
